<resources>
    <string name="app_name">NoteApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="sort">sort</string>
    <string name="aida_usenova">Aida Usenova</string>
    <string name="follow">FOLLOW</string>
    <string name="_2332">2332</string>
    <string name="_332">332</string>
    <string name="_732">732</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="about_aida">About Aida</string>
    <string name="appriciation">Appriciation</string>
</resources>